# pytentiostat

./: .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.rst  AUTHORS.txt  CHANGELOG.rst  JUAMY code Feb 13.py  LICENSE  LICENSE.rst  README.md  README.rst  cookiecutter.json  install_from_local.bat  pyproject.toml  rever.xsh  setup.py
.claude/: settings.local.json
.github/workflows/: build-and-publish-docs-on-dispatch.yml  build-wheel-release-github-private.yml  build-wheel-release-upload.yml  check-news-item.yml  matrix-and-codecov-on-merge-to-main.yml  matrix-and-codecov.yml  publish-docs-on-release.yml  tests-on-pr.yml
GUI/code/: Adv_params_GUI.py  (+18 more)
Pyserial/: PyserialTest
docs/: Current_Code.py  Makefile  UC_CA.md  UC_CV_3ElectrodeCell.docx  UC_CV_3ElectrodeCell.md  Use-Case-Cyclic-Voltammetry.md  basic_operation.rst  conf.py  experimentsetup.rst  gettingstarted.rst  index.rst  instrument_limitations.md  make.bat  setup.rst
local-install/: instructions.rst
local_install/: install_from_local.bat  install_pytentiostat.bat  install_pytentiostat.py  install_pytentiostat.sh  instructions.rst  kiwisolver-1.1.0-cp38-none-win_amd64.whl  mock-3.0.5-py2.py3-none-any.whl  pytest-5.3.4-py3-none-any.whl
news/: PysideLegacyIssues.rst  TEMPLATE.rst  add_docstrings_and_tests.rst  gui-restructure.rst  gui-test.rst  gui-tests.rst  help-implemented.rst  install-script.rst  install_pytentiostat.rst  mpl_base.rst  newpullrequest.rst  package.rst  plot_bug.rst  pyside6.rst  simulator.rst  test_config_reader.rst  test_gui_ca_exp_creator.rst  test_gui_config_reader.rst  typo.rst  update-local-bat.rst  version-implemented.rst  version.rst
pytentiostat/: JUAMI_lsvouput.csv  LSV-v0.1.py  LSV_External.py  LSV_Jeremy.py  LSV_Timing.py  Plotter.py  Reporter.py  Routines.py  Tester.py  _15_38_49.csv  adv_config.yml  config.json  config.yml  config_reader.py  exceptions.py  executable.py  gui.py  lsv.py  main.py  operator.py  plotter.py  pytentiostat_firmata.ino  reporter.py  routines.py  save_data_test.txt  tester.py  widgets.py
pytentiostat-main/: .gitignore  CHANGELOG.rst  environment.yml
requirements/: conda.txt  pip.txt  run.txt  test.txt
scripts/: build_local_install.py  deploy_docs.bat  deploy_docs_locally.bat  install_from_local.bat  pytentiostat  pytentiostat.bat
tests/: test_adv_params_gui.py  test_config_reader.py  test_gui_ca_exp_creator.py  test_gui_config_reader.py  test_gui_cv_exp_creator.py  test_gui_style.py  test_main.py  test_plotter.py  test_reporter.py  test_routines.py  test_simulator.py  test_version.py
(+147 files in other folders)
